stylesheets/screen.css
/* ... */
#resume .resume .client-info {
	color: #f91791;
	font-size: 17px;
}

@media screen and (max-width: 1024px) {
	#resume {
		height: 580px;
	}


#contactMe {
	background-color: #f91791;
	text-align: center;
	padding: 100px 0 120px 0;
	position: relative;
	color: #fff;
}

#contactMe:before {
	-moz-transform: skewY(-3deg);
	-ms-transform: skewY(-3deg);
	-webkit-transform: skewY(-3deg);
	transform: skewY(-3deg);
	height: 90px;
	width: 100%;
	content: "";
	top: -46px;
	left: 0;
	background: #f91791;
	position: absolute;
}
#resume .title h2:after {
	background-color: #f91791;
}

#contactMe h2 {
	font-size: 40px;
	padding: 0 0 35px;
	color: #fff;
	font-family: "Audrey-Normal", monospace;
}

#contactMe .button {
	border-color: #fff;
	color: #fff;
	clear: both;
}

#contactMe .button:hover {
	color: #f91791;
}

#contactMe .button:before {
	background: #fff;
}

#contactMe .contact-info {
	margin: 0 auto;
	font-size: 25px;
	font-family: "Audrey-Normal", monospace;
}

#contactMe .contact-info a {
	color: #fff;
	text-decoration: none;
}

#contactMe .contact-info a:hover {
	text-decoration: underline;
	font-weight: bolder;
}

#contactMe .contact-info div {
	display: inline-block;
}

#contactMe .contact-info div + div {
	margin: 0 0 0 20px;
}

#contactMe .contact-info .fa-mobile {
	font-size: 38px;
	float: left;
	margin-right: 10px;
	margin-top: -6px;
}

#contactMe .social {
	margin: 40px 0;
}

#contactMe .social a i {
	font-size: 24px;
	-moz-border-radius: 100px;
	-webkit-border-radius: 100px;
	border-radius: 100px;
	border: 2px solid #fff;
	display: inline-block;
	width: 55px;
	height: 55px;
	line-height: 55px;
	margin: 0 5px;
	-moz-transition: all 0.25s ease-in-out;
	-o-transition: all 0.25s ease-in-out;
	-webkit-transition: all 0.25s ease-in-out;
	transition: all 0.25s ease-in-out;
	color: #fff;
}

#contactMe .social a i:hover {
	background-color: #fff;
	color: #f91791;
}

#contactMe .copy {
	padding: 40px 0 0 0;
}

/*#featured {
background-color: #ededed;
text-align: center;
padding: 80px 0 180px 0;
position: relative;
}

#featured:after {
-moz-transform: skewY(-3deg);
-ms-transform: skewY(-3deg);
-webkit-transform: skewY(-3deg);
transform: skewY(-3deg);
height: 135px;
width: 100%;
content: "";
bottom: -80px;
left: 0;
background: #F4F4F4;
position: absolute;
}

#featured h2 {
font-size: 18px;
text-transform: uppercase;
/* font-family: 'Audrey-Normal'; */
/*padding-bottom: 42px;
}*/

#featured .galleries {
	display: inline-block;
}

#featured a {
	float: left;
	display: inline-block;
}

#featured a img {
	max-width: 80%;
}

#featured a + a {
	margin: 0 0 0 15px;
	}

	#resume .resume .quote {
		font-size: 22px;
	}

	@media screen and (max-width: 1024px) {
		#welcome .welcome {
			height: 580px;
		}

		#about .bg-image {
			background-position: -260% -158px;
		}
	}

	@media screen and (max-width: 780px) {
		body > section > .holder > .title h2 {
			font-size: 35px;
		}

		#featured a {
			height: 60px;
			float: none;
		}

		#welcome {
			background-position: center top;
			background-size: 130%;
		}

		#welcome .close {
			margin-top: -298px;
		}

		#welcome .close nav .holder {
			bottom: auto;
			background: #000;
		}

		#welcome nav .holder {
			bottom: auto;
			background: #000;
			position: static;
			padding: 10px 0;
			margin: 0;
		}

		#welcome nav .bg {
			display: none;
		}

		#welcome nav a {
			display: block;
			line-height: 45px;
			padding: 0;
			font-size: 20px;
		}

		#welcome .welcome h1 {
			font-size: 65px;
		}

		#welcome .welcome h2 {
			font-size: 70px;
		}

		#welcome .welcome p {
			font-size: 18px;
			line-height: 1.2;
		}

		#about {
			padding: 0 0 150px 0;
		}

		#about .experience .row .logo {
			float: none;
		}

		#about .experience .row .brief {
			padding: 15px 0 0 0;
		}

		#about .links a {
			margin: 0 0 12px 0 !important;
			width: 100%;
			float: left;
			padding: 0;
		}

		#about .title li {
			font-size: 20px;
			margin: 0 10px;
		}

		/*#about .bg-image {
		background-size: 150%;
		background-position: right bottom;
		}*/



		#about .tab {
			float: none;
			text-align: center;
			width: auto;
		}

		#about .tabs-menu {
			margin: 0 auto 20px auto;
		}

		#about .tabs-menu li a {
			padding: 0;
		}

		#about .holder {
			max-width: 90%;
			font-size: 18px;
		}

		#portfolio .slide_container {
			width: 100%;
		}

		#portfolio .slide_container .image_container_M {
			display: block;
		}

		#portfolio .box {
			width: 100%;
		}

		#contactMe .contact-info div {
			border: 1px solid #fff;
			margin: 0 auto 12px !important;
			-moz-border-radius: 3px;
			-webkit-border-radius: 3px;
			border-radius: 3px;
			height: 50px;
			line-height: 50px;
			width: 100%;
			font-size: 20px;
			clear: both;
		}

		#contactMe .contact-info .fa-mobile {
			position: relative;
			top: 4px;
			float: none;
		}


		#loader-wrapper .loader-section {
			position: fixed;
			top: 0;
			width: 51%;
			height: 100%;
			background: #222;
			z-index: 10;
		}

		#loader-wrapper .loader-section .section-left {
			left: 0;
		}

		#loader-wrapper .loader-section .section-right {
			right: 0;
		}

		/* Loaded */
		.loaded #loader-wrapper .loader-section .section-left {
			-webkit-transform: translateX(-100%);
			/* Chrome, Opera 15+, Safari 3.1+ */
			-ms-transform: translateX(-100%);
			/* IE 9 */
			transform: translateX(-100%);
			/* Firefox 16+, IE 10+, Opera */
		}

		.loaded #loader-wrapper .loader-section .section-right {
			-webkit-transform: translateX(100%);
			/* Chrome, Opera 15+, Safari 3.1+ */
			-ms-transform: translateX(100%);
			/* IE 9 */
			transform: translateX(100%);
			/* Firefox 16+, IE 10+, Opera */
		}

		.loaded #loader {
			opacity: 0;
		}

		.loaded #loader-wrapper {
			visibility: hidden;
		}

